Add custom wedding music (wedding-card.mp3)

--- a/index.html
+++ b/index.html
@@ -877,9 +877,9 @@
     </style>
 </head>
 <body>
-    <!-- Background Music - Traditional Indian Wedding -->
+    <!-- Background Music - Wedding Card -->
     <audio id="bgMusic" loop>
-        <source src="https://github.com/AsmrProg-YT/100-plus-frontend-projects-beginner-to-advanced/raw/refs/heads/master/Digital-Invitation/music/Jai%20Ho%20-%20A.R.%20Rahman%20_%20Pussycat%20Dolls.mp3" type="audio/mpeg">
+        <source src="wedding-card.mp3" type="audio/mpeg">
     </audio>
 
     <!-- Welcome Overlay -->
