--- a/index.html
+++ b/index.html
@@ -1445,6 +1445,14 @@
                         <p class="event-venue">📍 Dubhal, Gaya</p>
                         <p class="event-desc">Traditional haldi ceremony for the groom with turmeric, laughter, and blessings</p>
                     </div>
+                    <div class="event-card">
+                        <span class="side-label groom">Groom's Side</span>
+                        <div class="event-icon">💅</div>
+                        <h3 class="event-name">Mehendi</h3>
+                        <p class="event-date">Tuesday, February 24, 2026</p>
+                        <p class="event-venue">📍 Dubhal, Gaya</p>
+                        <p class="event-desc">Mehendi ceremony with beautiful designs and celebration</p>
+                    </div>
                 </div>
 
                 <!-- Bride's Events (Hidden by default) -->
