Fix journey section layout - keep on single line, change emojis

--- a/index.html
+++ b/index.html
@@ -836,18 +836,20 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 1rem;
-            flex-wrap: wrap;
+            gap: 0.8rem;
+            flex-wrap: nowrap;
             margin-top: 2rem;
+            padding: 0 0.5rem;
         }
 
         .journey-place {
             background: linear-gradient(135deg, var(--gold) 0%, var(--gold-light) 100%);
             color: var(--primary-dark);
-            padding: 1rem 1.5rem;
+            padding: 0.8rem 1rem;
             border-radius: 15px;
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+            white-space: nowrap;
         }
 
         .journey-arrow {
@@ -1697,9 +1699,9 @@
             <h2 class="section-title">The Wedding Journey</h2>
             
             <div class="journey-path">
-                <div class="journey-place">🏠 Dubhal, Gaya</div>
-                <div class="journey-arrow">→</div>
-                <div class="journey-place">💒 Madanpur</div>
+                <div class="journey-place">🏡 Dubhal, Gaya</div>
+                <div class="journey-arrow">➜</div>
+                <div class="journey-place">🛕 Madanpur</div>
             </div>
             
             <p class="journey-desc">
